--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hitung_tani
+name: situngtani
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -55,7 +55,7 @@ dependencies:
   pagination_view: ^2.0.0-nullsafety.0
   flutter_html: ^2.1.5
   package_info_plus: ^1.3.0
-
+  flutter_feather_icons: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
