--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_MAPS_API_KEY=AIzaSyBFL6YRlTNKGrchwEzxCTauajZAc_VXBdY
-API_BASE_URL=https://e-presensi.kemnaker.go.id/backend/api
+API_BASE_URL=http://192.168.18.27/web-and-api/public/api/
+#API_BASE_URL=http://192.168.100.110:8000/web-and-api/public/api/
