--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   flutter_html: ^2.1.5
   package_info_plus: ^1.3.0
   flutter_feather_icons: ^2.0.0
+  flutter_config: ^2.0.0
+  google_map_location_picker:
+    git:
+      url: https://github.com/Lyokone/google_map_location_picker
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
