--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_MAPS_API_KEY=AIzaSyBFL6YRlTNKGrchwEzxCTauajZAc_VXBdY
-API_BASE_URL=http://192.168.18.27/web-and-api/public/api/
-#API_BASE_URL=http://192.168.100.110:8000/web-and-api/public/api/
+#API_BASE_URL=http://192.168.18.27/web-and-api/public/api/
+API_BASE_URL=https://hitungtani.habim.or.id/public/api/
