--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   flutter_svg: ^0.22.0
   pin_code_fields: ^7.3.0
 #  flutter_fadein: ^2.0.0
-  google_maps_flutter: ^2.0.10
+#  google_maps_flutter: ^2.0.10
   firebase_core: ^1.6.0
   firebase_crashlytics: ^2.2.1
   #  camera: ^0.9.4
@@ -39,22 +39,23 @@ dependencies:
   get: ^4.3.8
   json_annotation: ^4.3.0
   loading_overlay: ^0.3.0
-  animate_do: ^2.0.0
+#  animate_do: ^2.0.0
   dio: ^4.0.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   jwt_decode: ^0.3.1
-  cached_network_image: ^3.1.0
+#  cached_network_image: ^3.1.0
   get_it: ^7.2.0
-  permission_handler: ^8.2.6
-  app_settings: ^4.1.1
-  location: ^4.3.0
-  geocoding: ^2.0.1
-  geolocator: ^7.7.1
-  shimmer: ^2.0.0
-  pagination_view: ^2.0.0-nullsafety.0
-  flutter_html: ^2.1.5
-  package_info_plus: ^1.3.0
+#  permission_handler: ^8.2.6
+#  app_settings: ^4.1.1
+#  location: ^4.3.0
+#  geocoding: ^2.0.1
+#  geolocator: ^7.7.1
+#  shimmer: ^2.0.0
+#  pagination_view: ^2.0.0-nullsafety.0
+#  flutter_html: ^2.1.5
+#  package_info_plus: ^1.3.0
+  open_file: ^3.2.1
   flutter_feather_icons: ^2.0.0
   flutter_config: ^2.0.0
   google_map_location_picker:
