--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   pin_code_fields: ^7.3.0
 #  flutter_fadein: ^2.0.0
 #  google_maps_flutter: ^2.0.10
-  firebase_core: ^1.6.0
-  firebase_crashlytics: ^2.2.1
+#  firebase_core: ^2.4.1
+#  firebase_crashlytics: ^2.2.1
   #  camera: ^0.9.4
   path_provider: ^2.0.5
   intl: ^0.17.0
@@ -58,9 +58,10 @@ dependencies:
   open_file: ^3.2.1
   flutter_feather_icons: ^2.0.0
   flutter_config: ^2.0.0
-  google_map_location_picker:
-    git:
-      url: https://github.com/Lyokone/google_map_location_picker
+#  google_map_location_picker: ^4.1.7
+#  google_map_location_picker:
+#    git:
+#      url: https://github.com/Lyokone/google_map_location_picker
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
